src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Vendor_Xray__c</fullName>
        <label>Vendor Xray</label>
        <picklist>
            <picklistValues>
                <fullName>Philips</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siemens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toshiba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Who_Signs_the_PO__c</fullName>
        <label>Who Signs the PO?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isMyArea__c</fullName>
        <formula>IF( Area__c = $User.Area__c, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isMyArea</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isMyDivision__c</fullName>
        <formula>IF( Division__c =  $User.Division, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isMyDivision</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isMyRegion__c</fullName>
        <formula>IF( Region__c =  $User.Region__c, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isMyRegion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>ALL_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Division__c</columns>
        <columns>Area__c</columns>
        <columns>Region__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>ALL Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Capital_Sales_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Area__c</columns>
        <columns>Region__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.SJM_Capital_Sales</value>
        </filters>
        <label>Capital Sales Opportunities</label>
        <sharedTo>
            <roleAndSubordinates>CEO</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>DBS_Opportunities_US</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.DBS</value>
        </filters>
        <label>DBS Opportunities - US</label>
        <sharedTo>
            <roleAndSubordinates>GM_Neuro</roleAndSubordinates>
            <roleAndSubordinates>VP_Marketing_Neuro</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>HFM_New_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.QUANTITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.CardioMEMS</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Won,Closed Lost</value>
        </filters>
        <label>HFM New Opportunities</label>
        <sharedTo>
            <roleAndSubordinates>SVP_HFM</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HFM_Re_orders_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>HFM_Total__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.QUANTITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.CardioMEMS_Reorder</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Won,Closed Lost</value>
        </filters>
        <label>HFM Re-orders Opportunities</label>
        <sharedTo>
            <roleAndSubordinates>SVP_HFM</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Service_Contract_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Area__c</columns>
        <columns>Region__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.SJM_Service_Plan_Sales</value>
        </filters>
        <label>Service Contract Opportunities</label>
        <sharedTo>
            <role>Customer_Service_Inside_Sales</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>CardioMEMS</fullName>
        <active>true</active>
        <businessProcess>SJM Sales Process</businessProcess>
        <description>CardioMEMS New Record Type</description>
        <label>SJM HFM New Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>CardioMEMS_Reorder</fullName>
        <active>true</active>
        <businessProcess>HFM Re-order</businessProcess>
        <description>CardioMEMS Re-order Record Type</description>
        <label>SJM HFM Re-order Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>DBS</fullName>
        <active>true</active>
        <businessProcess>SJM Sales Process</businessProcess>
        <description>Deep Brain Specific Opportunities</description>
        <label>DBS</label>
    </recordTypes>
    <recordTypes>
        <fullName>Integrated_Lab</fullName>
        <active>true</active>
        <businessProcess>SJM Sales Process</businessProcess>
        <description>Integrated Lab Record Type</description>
        <label>Integrated Lab</label>
    </recordTypes>
    <recordTypes>
        <fullName>SJM_Capital_Sales</fullName>
        <active>true</active>
        <businessProcess>SJM Sales Process</businessProcess>
        <description>SJM Capital Sales</description>
        <label>SJM Capital Sales</label>
    </recordTypes>
    <recordTypes>
        <fullName>SJM_Service_Plan_Sales</fullName>
        <active>true</active>
        <businessProcess>SJM Sales Process</businessProcess>
        <description>Record Type for Service Plan Sales</description>
        <label>SJM Service Plan Sales</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>IL_FirstUse_Install_Close_Date</fullName>
        <active>true</active>
        <description>If the Opportunity Type is Integrated Lab, then Close date &lt; installation date &lt; first use date</description>
        <errorConditionFormula>AND($RecordType.Name = &quot;Integrated Lab&quot;,OR(First_Use_Date__c &lt; Installed_Date__c,Installed_Date__c &lt; CloseDate, First_Use_Date__c &lt; CloseDate))</errorConditionFormula>
        <errorMessage>Please validate Close Date, Install Date and First Use Date. Install Date and First Use Date should be greater than Close Date. First Use Date should be greater than Install Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>New_Opportunity_Prospecting</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISNEW() , NOT( ISPICKVAL( StageName  , &quot;Prospecting&quot;)), NOT($RecordType.DeveloperName= &quot;CardioMEMS_Reorder&quot;))</errorConditionFormula>
        <errorMessage>Opportunity Created new should have a Stage as &quot;Prospecting&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_Edit_Closed</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL(PRIORVALUE( StageName ), &quot;Closed Won&quot;),
NOT(OR(
 $Profile.Name = &apos;System Administrator&apos;
)
)
)</errorConditionFormula>
        <errorMessage>Opportunity closed  Won cannot be re-opened by a field representative. Please select Clone Option from Opportunity Detail screen.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_Owner_Edit</fullName>
        <active>true</active>
        <errorConditionFormula>AND((Owner.Id  &lt;&gt;  $User.Id), ISCHANGED( StageName ), $UserRole.Name &lt;&gt; &apos;Customer Service - Inside Sales&apos;)</errorConditionFormula>
        <errorMessage>Only Opportunity Owner Can update</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Product_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( OR
(ISPICKVAL(StageName,&quot;Qualifying&quot;),
ISPICKVAL(StageName,&quot;Handling Objections&quot;),
ISPICKVAL(StageName,&quot;Final Negotiations&quot;),
ISPICKVAL(StageName,&quot;Closed Won&quot;)

)


,HasOpportunityLineItem=FALSE,
$RecordType.Name = &quot;SJM Capital Sales&quot;
)</errorConditionFormula>
        <errorMessage>Products must be entered.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reason_Lost_Required</fullName>
        <active>false</active>
        <errorConditionFormula>AND(IsClosed = TRUE,
IsWon = FALSE,
ISBLANK(TEXT((Reason_Lost__c))))</errorConditionFormula>
        <errorDisplayField>Reason_Lost__c</errorDisplayField>
        <errorMessage>Reason Lost is required for Opportunity with a Stage of &quot;Closed  Lost&quot;</errorMessage>
    </validationRules>
</CustomObject>